<resources>
    <string name="app_name">Mosac</string>
    <string name="number">学号</string>
    <string name="numberHint">请输入您的学号</string>
    <string name="password">密码</string>
    <string name="passwordHint">请输入您的密码</string>
    <string name="confirm">登录</string>
    <string name="register">注册账号</string>
    <string name="forget">忘记密码?</string>
    <string name="findpassword">找回密码</string>
    <string name="tab1">论坛</string>
    <string name="tab2">活动</string>
    <string name="tab3">tab3</string>
    <string name="tab4">我</string>
    <string name="username">姓名</string>
    <string name="teamname">队伍名字</string>
    <string name="type">活动类型</string>
    <string name="contact_number">电话</string>
    <string name="email">邮箱</string>
    <string name="department">学院</string>
    <string name="usernameHint">请输入您的真实姓名</string>
    <string name="teamnameHint">请输入您的队伍名字</string>
    <string name="typeHint">请选择发起的活动类型</string>
    <string name="contact_numberHint">请输入您的联系电话</string>
    <string name="emailHint">请输入您的邮箱</string>
    <string name="departmentHint">请输入您的学院</string>
    <string name="light">点亮</string>
    <string name="comment">评论</string>
    <string name="captainMsg">队长</string>
    <string name="teammateMsg">队员</string>
    <string name="emptyComment">目前还没有人评论哦，快来抢沙发吧！</string>
    <string name="QueryComment">评论</string>
    <string name="insertPost">我要发帖</string>
    <string name="createTeam">我要创建活动队伍</string>
    <string name="insertPostTitle">发新帖</string>
    <string name="createTeamTitle">创建活动队伍</string>
    <string name="titleHint">请输入标题</string>
    <string name="contentHint">从这里开始输入内容</string>
    <string name="cancel">取消</string>
    <string name="ok">发表</string>
    <string name="create">创建</string>
    <string name="searchHint">根据标题搜索相关帖子</string>
    <string name="CommentDialogTitle">回帖</string>
    <string name="CommentHint">从这里开始输入评论内容</string>
    <string name="MyPost">我的论坛发帖</string>
    <string name="MyCreateTeam">我创建的活动队伍</string>
    <string name="MyJoinTeam">我加入的活动队伍</string>
    <string name="sure">确定</string>
    <string name="all">所有</string>
    <string name="study">学习</string>
    <string name="sports">运动</string>
    <string name="outdoor">户外</string>
    <string name="game">游戏</string>
    <string name="look">查看</string>
    <string name="description">活动描述</string>
    <string name="teammessage">活动信息</string>
    <string name="capatin">队长：</string>
    <string name="time">时间：</string>
    <string name="teamtime">活动时间</string>
    <string name="place">地点：</string>
    <string name="teamplace">活动地点</string>
    <string name="nownum">当前人数：</string>
    <string name="maxnum">支持人数：</string>
    <string name="maxnumber">支持人数</string>
    <string name="maxnumberHint">请输入活动最大支持的人数</string>
    <string name="placeHint">请输入活动的具体地点</string>
    <string name="descriptionHint">请输入对活动内容的描述，最大输入100字</string>
    <string name="join">申请加入</string>
    <string name="leave">离开队伍</string>
    <string name="myteammates">我的队友</string>
    <string name="joinlist">申请列表</string>
    <string name="agree">允许加入</string>
    <string name="deny">拒绝加入</string>
    <string name="teamtimeHint">请输入活动的具体时间</string>
</resources>
