<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="@drawable/subtle_pattern">
    <TextView
        android:id="@+id/title"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:background="#252525"
        android:gravity="center"
        android:text="@string/findpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <View
        android:id="@+id/div"
        android:layout_below="@id/title"
        android:layout_above="@id/home_bottom_bar"
        android:layout_width="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="2dp"
        android:layout_height="2dp"
        android:background="#6e303030">
    </View>
    <LinearLayout
        android:id="@+id/ly1"
        android:layout_below="@id/div"
        android:gravity="center"
        android:background="@drawable/create_team_edit_bg"
        android:layout_margin = "5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:text="@string/number"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#6e303030" />
        <EditText
            android:id="@+id/edit_number"
            android:textSize="15sp"
            android:hint="@string/numberHint"
            android:background="@null"
            android:inputType="number"
            android:maxLength="8"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ly2"
        android:layout_below="@id/ly1"
        android:gravity="center"
        android:layout_margin = "5dp"
        android:background="@drawable/create_team_edit_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:text="@string/username"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#6e303030" />
        <EditText
            android:id="@+id/edit_username"
            android:textSize="15sp"
            android:hint="@string/usernameHint"
            android:background="@null"
            android:inputType="text"
            android:maxLength="8"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ly3"
        android:layout_below="@id/ly2"
        android:gravity="center"
        android:layout_margin = "5dp"
        android:background="@drawable/create_team_edit_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:text="@string/contact_number"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#6e303030" />
        <EditText
            android:id="@+id/edit_contactnumber"
            android:textSize="15sp"
            android:hint="@string/contact_numberHint"
            android:background="@null"
            android:inputType="number"
            android:maxLength="11"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ly4"
        android:layout_below="@id/ly3"
        android:gravity="center"
        android:layout_margin = "5dp"
        android:background="@drawable/create_team_edit_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:text="@string/email"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#6e303030" />
        <EditText
            android:id="@+id/edit_email"
            android:textSize="15sp"
            android:hint="@string/emailHint"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:maxLength="20"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>