<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true">

    <RadioGroup
        android:id="@+id/topmenu"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/all"
            android:textStyle="bold"
            android:textColor="@drawable/textstyle" />
        <RadioButton
            android:id="@+id/study"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/study"
            android:textStyle="bold"
            android:textColor="@drawable/textstyle"/>
        <RadioButton
            android:id="@+id/sports"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sports"
            android:textStyle="bold"
            android:textColor="@drawable/textstyle"/>
        <RadioButton
            android:id="@+id/outdoor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/outdoor"
            android:textStyle="bold"
            android:textColor="@drawable/textstyle"/>
        <RadioButton
            android:id="@+id/game"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/game"
            android:textStyle="bold"
            android:textColor="@drawable/textstyle"/>
    </RadioGroup>
    <View
        android:id="@+id/div"
        android:layout_below="@id/topmenu"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#6e303030">
    </View>
    <android.support.v4.view.ViewPager
        android:id="@+id/teamlistViewPager"
        android:layout_below="@id/div"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>
</RelativeLayout>