<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/subtle_pattern">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:background="#252525"
        android:gravity="center"
        android:layout_height="50dp">
        <TextView
            android:text="@string/register"
            android:textColor="#FFF"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:id="@+id/div"
        android:layout_below="@id/title"
        android:background="#6e303030"
        android:layout_width="match_parent"
        android:layout_height="1dp">
    </View>
    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@id/title"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/ly1"
            android:gravity="center"
            android:background="@drawable/create_team_edit_bg"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/username"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#6e303030" />
            <EditText
                android:id="@+id/edit_username"
                android:textSize="15sp"
                android:hint="@string/usernameHint"
                android:background="@null"
                android:inputType="text"
                android:maxLength="5"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ly2"
            android:gravity="center"
            android:background="@drawable/create_team_edit_bg"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/number"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#6e303030" />
            <EditText
                android:id="@+id/edit_number"
                android:textSize="15sp"
                android:hint="@string/numberHint"
                android:background="@null"
                android:inputType="number"
                android:maxLength="8"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ly3"
            android:gravity="center"
            android:background="@drawable/create_team_edit_bg"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/password"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#6e303030" />
            <EditText
                android:id="@+id/edit_password"
                android:textSize="15sp"
                android:hint="@string/passwordHint"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="20"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ly4"
            android:gravity="center"
            android:background="@drawable/create_team_edit_bg"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/contact_number"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#6e303030" />
            <EditText
                android:id="@+id/edit_contactnumber"
                android:textSize="15sp"
                android:hint="@string/contact_numberHint"
                android:background="@null"
                android:inputType="number"
                android:maxLength="11"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ly5"
            android:gravity="center"
            android:background="@drawable/create_team_edit_bg"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/email"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#6e303030" />
            <EditText
                android:id="@+id/edit_email"
                android:textSize="15sp"
                android:hint="@string/emailHint"
                android:background="@null"
                android:inputType="textEmailAddress"
                android:maxLength="20"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ly6"
            android:gravity="center"
            android:background="@drawable/create_team_edit_bg"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/department"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#6e303030" />
            <EditText
                android:id="@+id/edit_department"
                android:textSize="15sp"
                android:hint="@string/departmentHint"
                android:background="@null"
                android:inputType="text"
                android:maxLength="20"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="50dp">
            <Button
                android:id="@+id/confirm"
                android:text="注册并登录"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:background="@drawable/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>