<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="120dp">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="4dp"
        card_view:cardBackgroundColor="#fff"
        card_view:cardElevation="2dp">
        <LinearLayout
            android:layout_marginStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="200dp"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/name"
                    android:text="@string/username"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
                <TextView
                    android:id="@+id/department"
                    android:text="@string/department"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
                <TextView
                    android:id="@+id/email"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/agree"
                    android:text="@string/agree"
                    android:textColor="#FFF"
                    android:textSize="16sp"
                    android:background="@drawable/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/deny"
                    android:text="@string/deny"
                    android:textColor="#FFF"
                    android:textSize="16sp"
                    android:background="@drawable/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>