<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="90dp">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="4dp"
        card_view:cardBackgroundColor="#fff"
        card_view:cardElevation="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp">
                <TextView
                    android:id="@+id/name"
                    android:text="@string/username"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />
                <TextView
                    android:id="@+id/department"
                    android:text="@string/department"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />
                <TextView
                    android:id="@+id/email"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>