<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="@drawable/subtle_pattern">
    <include android:id="@+id/AppTitle" layout="@layout/app_title" />
    <LinearLayout
        android:id="@+id/home_bottom_bar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:background="#252525"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/tab1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:duplicateParentState="true"
                android:src="@drawable/drawable_tab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:duplicateParentState="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab1"
                android:textColor="@drawable/textstyle" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab2"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:duplicateParentState="true"
                android:src="@drawable/drawable_tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:duplicateParentState="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab2"
                android:textColor="@drawable/textstyle" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab4"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:duplicateParentState="true"
                android:src="@drawable/drawable_tab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:duplicateParentState="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab4"
                android:textColor="@drawable/textstyle" />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/home_content"
        android:layout_below="@id/AppTitle"
        android:layout_above="@id/div"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>
    <View
        android:id="@+id/div"
        android:layout_above="@id/home_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#6e303030">
    </View>
</RelativeLayout>